[tool.poetry]
name = "openwrt-tests"
version = "0.1.0"
description = ""
authors = ["Paul Spooren <mail@aparcar.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
labgrid = {git = "https://github.com/aparcar/labgrid.git", rev = "aparcar/staging"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
