[tool.poetry]
name = "openwrt-tests"
version = "0.1.0"
description = ""
authors = ["Paul Spooren <mail@aparcar.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
labgrid = {git = "https://github.com/aparcar/labgrid.git", rev = "aparcar/staging"}
pytest-harvest = "^1.10.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
